# imgui-int-lib

./: .gitmodules  CMakeLists.txt  README.md  imgui-int-Config.cmake
cmake/: emscripten.cmake  environment.html.in  toolchain-cross-mingw-linux.cmake
cmake/Modules/Platform/: Emscripten.cmake
examples/: CMakeLists.txt  blueprints-example.cpp  blueprints-utils.h  canvas-example.cpp  example.cpp  interaction-example.cpp  node-example.cpp
ext/: CMakeLists.txt
ext/binary_to_compressed_source/: CMakeLists.txt
include/imgui/: context.h  default_style.h  renderer.h  style.h  system_integration.h  ui.h  widgets.h
patches/: 0001-Add-layout-support-to-imgui.patch
src/: calendar_widgets.cpp  context.cpp  data_time_widgets.cpp  default_style.cpp  ui.cpp
src/dx9/: renderer.cpp  renderer.h
src/emscripten/: system_integration.cpp  system_integration.h
src/gl/: renderer.cpp  renderer.h
src/sdl/: select_sdl_renderer.cpp  select_sdl_renderer.h  system_integration.cpp  system_integration.h
src/vulkan/: renderer.cpp  renderer.h
src/win32/: select_win32_renderer.cpp  select_win32_renderer.h  system_integration.cpp  system_integration.h  windows_headers.h
